# RemitPay

./: LICENSE  README.md
backend/: package-lock.json  package.json
backend/src/: server.js
backend/src/config/: solana.js
backend/src/controllers/: authController.js  recipientController.js  transactionController.js  userController.js  walletController.js
backend/src/middleware/: auth.js  errorHandler.js  rateLimit.js  validation.js
backend/src/models/: Recipient.js  Transaction.js  User.js  Wallet.js
backend/src/routes/: auth.js  transactions.js  users.js  wallets.js
backend/src/services/: circleService.js  exchangeRateService.js  notificationService.js  solanaService.js
backend/src/utils/: helpers.js  logger.js  validators.js
docs/: API.md  Architecture.md  DEPLOYMENT.md  USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.jsx
frontend/src/hooks/: useExchangeRate.js  useTransaction.js  useWallet.js
frontend/src/pages/: History.jsx  Home.jsx  Receive.jsx  Recipients.jsx  Send.jsx  Settings.jsx
frontend/src/services/: api.js  solana.js  wallet.js
program/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
program/migrations/: deploy.ts
program/programs/remiteasy/: Cargo.toml
program/programs/remiteasy/src/: error.rs  lib.rs  state.rs  utils.rs
program/programs/remiteasy/src/instructions/: mod.rs
program/tests/: remiteasy.ts
scripts/: deploy.sh  seed-data.js  test-transaction.js
(+22 files in other folders)
