[package]
name = "remiteasy"
version = "0.1.0"
description = "Cross-border remittance platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "remiteasy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
anchor-client = "0.29.0"
solana-program-test = "1.17"
solana-sdk = "1.17"